# PS

./: CMakeLists.txt
C1/: main.c
C2/: C2z1.c  C2z2.c  C2z3.c  Z2.c  Z3.c
Cw1/: Blad175224.c  main.c
Cw1/C1/: C1.c
Cw1/C2/: C2.c
Cw1/C3/: C3.c
Cw1/C4/: C4.c
