cmake_minimum_required(VERSION 3.26)
project(PS C)

set(CMAKE_C_STANDARD 11)

add_executable(PS Cw1/main.c)
add_executable(C1 Cw1/C1/C1.c)
add_executable(C2 Cw1/C2/C2.c)
add_executable(C3 Cw1/C3/C3.c)
add_executable(C4 Cw1/C4/C4.c)
add_executable(C2z1 C2/C2z1.c)
add_executable(C2z2 C2/C2z2.c)
add_executable(C2z3 C2/C2z3.c)
add_executable(Blad Cw1/Blad175224.c)

